Double.valueOf instead of new Double()