@@ -30,7 +30,7 @@ public class XPoint2D {
 
 	@Override
 	public int hashCode() {
-		return new Double(x).hashCode() + new Double(y).hashCode();
+		return Double.valueOf(x).hashCode() + Double.valueOf(y).hashCode();
 	}
 
 	public final double getX() {
